--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <script src="app/controllers/product/addProdotto.ctrl.js"></script>
     <script src="app/controllers/product/productList.ctrl.js"></script>
     <script src="app/component/spinner/spinner.component.js"></script>
-    <script src="app/component/productList/productList.component.js"></script>
+    <!--<script src="app/component/productList/productList.component.js"></script>-->
     <script src="app/constants/toastr/toastr.config.js"></script>
     <script src="app/controllers/dialog.ctrl.js"></script>
     <script src="app/component/sidebar/sidebar.component.js"></script>
