add various component

--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
     <script src="app/component/itemsTable/itemsTable.component.js"></script>
     <script src="app/controllers/customers/customer.ctrl.js"></script>
     <script src="app/controllers/nutrition.ctrl.js"></script>
+    <!--<script src="app/component/nutrition.ctrl.js"></script>-->
+    <script src="app/component/itemsTable/delete-table.component.js"></script>
+    <script src="app/component/itemsTable/search-table.component.js"></script>
+    <script src="app/component/itemsTable/refresh-table.component.js"></script>
+    <script src="app/component/itemsTable/filters-table.component.js"></script>
+    <script src="app/component/itemsTable/filters-button.component.js"></script>
+    <script src="app/component/itemsTable/search-button.component.js"></script>
+
+
+
+
+
     <script src="css/app.less"></script>
     <script src="css/app.css"></script>
 
